fix; add flex properties to votes container to align items vertically

--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -31,6 +31,9 @@
 
 .post-votes-container {
   margin-right: var(--spacing-3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .post-votes-container .post-votes-number {
